# moltbook-theater

./: .gitignore  check_datasets.py  combine_datasets.py  embedding_metrics.py  explore_data.py  llm_judge.py  metrics.py  pyproject.toml  run_analysis.py  run_metrics.py  test_litellm.py
paper-tex/: colm2026_conference.bib  colm2026_conference.sty  colm2026_conference.tex
