[project]
name = "agent-society"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "litellm>=1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "openai>=1.0",
    "pandas>=3.0.1",
    "pydantic>=2.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
